// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditsHistorySection renders loading state when creditsHistoryData is undefined 1`] = `
<div>
  <div
    class="chakra-container css-apa9e3"
  >
    <div
      class="css-ici0xu"
      id="issued-retired-chart"
    >
      <div
        class="css-1ez8rph"
      >
        <div
          class="css-12rn99f"
          id="issued-retired-chart-header"
        >
          <div
            class="css-a3yeag"
          >
            <div
              class="chakra-stack css-1igwmid"
            >
              <p
                class="chakra-text css-7b6cxa"
              >
                World
              </p>
            </div>
          </div>
          <div
            class="css-1q2dfsb"
          >
            <div
              class="chakra-stack css-s7zwns"
            >
              <div
                class="chakra-stack css-8g8ihq"
              >
                <div
                  aria-controls="popover-content-:r1:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="chakra-stack css-8g8ihq"
                  id="popover-trigger-:r1:"
                >
                  <div
                    class="chakra-input__group css-bx0blc"
                    data-group="true"
                  >
                    <input
                      class="chakra-input css-1luyivc"
                      data-testid="dropdown_input"
                      placeholder="Select region"
                    />
                    <div
                      class="chakra-input__right-element css-2cnd2z"
                    >
                      <button
                        aria-label="toggle menu"
                        class="chakra-button css-smvcgw"
                        data-testid="dropdown-button"
                        type="button"
                      >
                        <svg
                          class="chakra-icon css-c0air1"
                          focusable="false"
                          viewBox="0 0 8 4"
                        >
                          <path
                            d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="chakra-popover__popper css-0"
                  style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
                >
                  <section
                    aria-describedby="popover-body-:r1:"
                    class="chakra-popover__content css-1d7l81o"
                    data-testid="dropdown-body"
                    id="popover-content-:r1:"
                    role="dialog"
                    style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
                    tabindex="-1"
                  >
                    <div
                      class="chakra-popover__body css-0"
                      id="popover-body-:r1:"
                    >
                      <ul
                        class="css-155za0w"
                        role="list"
                      >
                        <li
                          class="css-1t8a73s"
                        >
                          <div
                            class="css-18biwo"
                          >
                            AFRICA
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-1"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Northern Africa
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-2"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Sub Saharan Africa
                          </div>
                        </li>
                        <li
                          class="css-1t8a73s"
                        >
                          <div
                            class="css-18biwo"
                          >
                            AMERICAS
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-4"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Latin America and the Caribbean
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-5"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Northern America
                          </div>
                        </li>
                        <li
                          class="css-1t8a73s"
                        >
                          <div
                            class="css-18biwo"
                          >
                            ASIA
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-7"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Central Asia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-8"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Eastern Asia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-9"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Southern Asia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-10"
                        >
                          <div
                            class="css-18biwo"
                          >
                            South Eastern Asia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-11"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Western Asia
                          </div>
                        </li>
                        <li
                          class="css-1t8a73s"
                        >
                          <div
                            class="css-18biwo"
                          >
                            EUROPE
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-13"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Eastern Europe
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-14"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Northern Europe
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-15"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Southern Europe
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-16"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Western Europe
                          </div>
                        </li>
                        <li
                          class="css-1t8a73s"
                        >
                          <div
                            class="css-18biwo"
                          >
                            OCEANIA
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-18"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Australia and New Zealand
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-19"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Melanesia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-20"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Micronesia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-21"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Polynesia
                          </div>
                        </li>
                      </ul>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-57dgik"
          >
            <div
              class="chakra-stack css-1xum4w9"
            >
              <span
                class="css-1qm7lvz"
                data-testid="test-id-Max"
              >
                <span
                  class="css-zvlevn"
                >
                  Max
                </span>
              </span>
              <span
                class="css-1qm7lvz"
                data-testid="test-id-12m"
              >
                <span
                  class="css-zvlevn"
                >
                  12m
                </span>
              </span>
              <span
                class="css-1qm7lvz"
                data-testid="test-id-6m"
              >
                <span
                  class="css-zvlevn"
                >
                  6m
                </span>
              </span>
              <span
                class="css-1qm7lvz"
                data-testid="test-id-1m"
              >
                <span
                  class="css-zvlevn"
                >
                  1m
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-14fqov2"
      >
        <div
          class="css-9ty7ec"
          id="issued-retired-chart-header"
        >
          <div
            class="css-f5ds6o"
          >
            <div
              class="chakra-stack css-c3wesr"
            >
              <div
                class="chakra-stack css-6uacnb"
              >
                <div
                  class="chakra-skeleton css-10x8ef7"
                />
                <p
                  class="chakra-text css-0"
                >
                  Issued
                </p>
              </div>
              <div
                class="chakra-stack__divider css-2if2sn"
              />
              <div
                class="chakra-stack css-6uacnb"
              >
                <div
                  class="chakra-skeleton css-10x8ef7"
                />
                <p
                  class="chakra-text css-0"
                >
                  Retired
                </p>
              </div>
            </div>
          </div>
          <div
            class="css-1r9qc8o"
          >
            <div
              class="chakra-skeleton css-4e2to2"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditsHistorySection renders the widget when rawCreditsHistory and creditsHistoryData are defined 1`] = `
<div>
  <div
    class="chakra-container css-apa9e3"
  >
    <div
      class="css-ici0xu"
      id="issued-retired-chart"
    >
      <div
        class="css-1ez8rph"
      >
        <div
          class="css-12rn99f"
          id="issued-retired-chart-header"
        >
          <div
            class="css-a3yeag"
          >
            <div
              class="chakra-stack css-1igwmid"
            >
              <button
                aria-label=""
                class="chakra-button css-p7mkev"
                data-testid="button-region-back"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="chakra-icon css-n059si"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13.7402 17.1274L9.24601 12.6332C9.15241 12.5396 9.08638 12.4392 9.04793 12.3322C9.00947 12.2252 8.99023 12.1146 8.99023 12.0005C8.99023 11.88 9.00947 11.7678 9.04793 11.664C9.08638 11.5601 9.15241 11.4614 9.24601 11.3678L13.7402 6.87358C13.8851 6.72869 14.0607 6.65625 14.2671 6.65625C14.4735 6.65625 14.6492 6.72869 14.794 6.87358C14.9389 7.01844 15.0114 7.19408 15.0114 7.40048C15.0114 7.60688 14.9389 7.78251 14.794 7.92738L10.721 12.0005L14.794 16.0736C14.9389 16.2184 15.0114 16.3941 15.0114 16.6005C15.0114 16.8069 14.9389 16.9825 14.794 17.1274C14.6492 17.2723 14.4735 17.3447 14.2671 17.3447C14.0607 17.3447 13.8851 17.2723 13.7402 17.1274Z"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <p
                class="chakra-text css-7b6cxa"
              >
                Latin America and the Caribbean
              </p>
            </div>
          </div>
          <div
            class="css-1q2dfsb"
          >
            <div
              class="chakra-stack css-s7zwns"
            >
              <div
                class="chakra-stack css-8g8ihq"
              >
                <div
                  aria-controls="popover-content-:r3:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="chakra-stack css-8g8ihq"
                  id="popover-trigger-:r3:"
                >
                  <div
                    class="chakra-input__group css-bx0blc"
                    data-group="true"
                  >
                    <input
                      class="chakra-input css-1luyivc"
                      data-testid="dropdown_input"
                      placeholder="Colombia"
                    />
                    <div
                      class="chakra-input__right-element css-2cnd2z"
                    >
                      <button
                        aria-label="toggle menu"
                        class="chakra-button css-smvcgw"
                        data-testid="dropdown-button"
                        type="button"
                      >
                        <svg
                          class="chakra-icon css-c0air1"
                          focusable="false"
                          viewBox="0 0 8 4"
                        >
                          <path
                            d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="chakra-popover__popper css-0"
                  style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
                >
                  <section
                    aria-describedby="popover-body-:r3:"
                    class="chakra-popover__content css-1d7l81o"
                    data-testid="dropdown-body"
                    id="popover-content-:r3:"
                    role="dialog"
                    style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
                    tabindex="-1"
                  >
                    <div
                      class="chakra-popover__body css-0"
                      id="popover-body-:r3:"
                    >
                      <ul
                        class="css-155za0w"
                        role="list"
                      >
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-0"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Anguilla
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-1"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Antigua and Barbuda
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-2"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Argentina
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-3"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Aruba
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-4"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bahamas
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-5"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Barbados
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-6"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Belize
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-7"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bolivia (Plurinational State of)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-8"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bonaire, Sint Eustatius and Saba
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-9"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bouvet Island
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-10"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Brazil
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-11"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Cayman Islands
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-12"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Chile
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-13"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Colombia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-14"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Costa Rica
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-15"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Cuba
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-16"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Curaçao
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-17"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Dominica
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-18"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Dominican Republic
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-19"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Ecuador
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-20"
                        >
                          <div
                            class="css-18biwo"
                          >
                            El Salvador
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-21"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Falkland Islands (Malvinas)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-22"
                        >
                          <div
                            class="css-18biwo"
                          >
                            French Guiana
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-23"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Grenada
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-24"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guadeloupe
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-25"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guatemala
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-26"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guyana
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-27"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Haiti
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-28"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Honduras
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-29"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Jamaica
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-30"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Martinique
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-31"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Mexico
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-32"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Montserrat
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-33"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Nicaragua
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-34"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Panama
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-35"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Paraguay
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-36"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Peru
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-37"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Puerto Rico
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-38"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Barthélemy
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-39"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Kitts and Nevis
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-40"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Lucia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-41"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Martin (French part)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-42"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Vincent and the Grenadines
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-43"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Sint Maarten (Dutch part)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-44"
                        >
                          <div
                            class="css-18biwo"
                          >
                            South Georgia and the South Sandwich Islands
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-45"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Suriname
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-46"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Trinidad and Tobago
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-47"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Turks and Caicos Islands
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-48"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Uruguay
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-49"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Venezuela (Bolivarian Republic of)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-50"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Virgin Islands (British)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-51"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Virgin Islands (U.S.)
                          </div>
                        </li>
                      </ul>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-57dgik"
          >
            <div
              class="chakra-stack css-1xum4w9"
            >
              <span
                class="css-1qm7lvz"
                data-testid="test-id-Max"
              >
                <span
                  class="css-zvlevn"
                >
                  Max
                </span>
              </span>
              <span
                class="css-1qm7lvz"
                data-testid="test-id-12m"
              >
                <span
                  class="css-zvlevn"
                >
                  12m
                </span>
              </span>
              <span
                class="css-1qm7lvz"
                data-testid="test-id-6m"
              >
                <span
                  class="css-zvlevn"
                >
                  6m
                </span>
              </span>
              <span
                class="css-1qm7lvz"
                data-testid="test-id-1m"
              >
                <span
                  class="css-zvlevn"
                >
                  1m
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-14fqov2"
      >
        <div
          class="chakra-stack css-1unzjcy"
        >
          <div
            class="css-9ty7ec"
            id="issued-retired-chart-header"
          >
            <div
              class="css-1tneayp"
            >
              <div
                class="chakra-stack css-c3wesr"
              >
                <div
                  class="chakra-stat css-1882jtg"
                >
                  <dl>
                    <dd
                      class="chakra-stat__number css-u3vx1n"
                    >
                      <p
                        class="chakra-text css-0"
                      >
                        141
                      </p>
                      <p
                        class="chakra-text css-0"
                      >
                        MM
                      </p>
                    </dd>
                    <dt
                      class="chakra-stat__label css-0"
                    >
                      Issued
                    </dt>
                  </dl>
                </div>
              </div>
            </div>
            <div
              class="css-1r9qc8o"
            >
              <div
                style="width: 100%; height: 100%;"
              />
            </div>
          </div>
          <p
            class="chakra-text css-1pnshin"
          >
            Data represented as of 7/20/2023 6:25:43 PM
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditsHistorySection renders the widget when rawCreditsHistory and creditsHistoryData are defined but has no chart data 1`] = `
<div>
  <div
    class="chakra-container css-apa9e3"
  >
    <div
      class="css-ici0xu"
      id="issued-retired-chart"
    >
      <div
        class="css-1ez8rph"
      >
        <div
          class="css-12rn99f"
          id="issued-retired-chart-header"
        >
          <div
            class="css-a3yeag"
          >
            <div
              class="chakra-stack css-1igwmid"
            >
              <button
                aria-label=""
                class="chakra-button css-p7mkev"
                data-testid="button-region-back"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="chakra-icon css-n059si"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13.7402 17.1274L9.24601 12.6332C9.15241 12.5396 9.08638 12.4392 9.04793 12.3322C9.00947 12.2252 8.99023 12.1146 8.99023 12.0005C8.99023 11.88 9.00947 11.7678 9.04793 11.664C9.08638 11.5601 9.15241 11.4614 9.24601 11.3678L13.7402 6.87358C13.8851 6.72869 14.0607 6.65625 14.2671 6.65625C14.4735 6.65625 14.6492 6.72869 14.794 6.87358C14.9389 7.01844 15.0114 7.19408 15.0114 7.40048C15.0114 7.60688 14.9389 7.78251 14.794 7.92738L10.721 12.0005L14.794 16.0736C14.9389 16.2184 15.0114 16.3941 15.0114 16.6005C15.0114 16.8069 14.9389 16.9825 14.794 17.1274C14.6492 17.2723 14.4735 17.3447 14.2671 17.3447C14.0607 17.3447 13.8851 17.2723 13.7402 17.1274Z"
                    fill="currentColor"
                  />
                </svg>
              </button>
              <p
                class="chakra-text css-7b6cxa"
              >
                Latin America and the Caribbean
              </p>
            </div>
          </div>
          <div
            class="css-1q2dfsb"
          >
            <div
              class="chakra-stack css-s7zwns"
            >
              <div
                class="chakra-stack css-8g8ihq"
              >
                <div
                  aria-controls="popover-content-:r5:"
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  class="chakra-stack css-8g8ihq"
                  id="popover-trigger-:r5:"
                >
                  <div
                    class="chakra-input__group css-bx0blc"
                    data-group="true"
                  >
                    <input
                      class="chakra-input css-1luyivc"
                      data-testid="dropdown_input"
                      placeholder="Colombia"
                    />
                    <div
                      class="chakra-input__right-element css-2cnd2z"
                    >
                      <button
                        aria-label="toggle menu"
                        class="chakra-button css-smvcgw"
                        data-testid="dropdown-button"
                        type="button"
                      >
                        <svg
                          class="chakra-icon css-c0air1"
                          focusable="false"
                          viewBox="0 0 8 4"
                        >
                          <path
                            d="M3.99911 3.9034L0.191406 0.0957031H7.80681L3.99911 3.9034Z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="chakra-popover__popper css-0"
                  style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
                >
                  <section
                    aria-describedby="popover-body-:r5:"
                    class="chakra-popover__content css-1d7l81o"
                    data-testid="dropdown-body"
                    id="popover-content-:r5:"
                    role="dialog"
                    style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.95) translateZ(0);"
                    tabindex="-1"
                  >
                    <div
                      class="chakra-popover__body css-0"
                      id="popover-body-:r5:"
                    >
                      <ul
                        class="css-155za0w"
                        role="list"
                      >
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-0"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Anguilla
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-1"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Antigua and Barbuda
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-2"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Argentina
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-3"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Aruba
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-4"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bahamas
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-5"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Barbados
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-6"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Belize
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-7"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bolivia (Plurinational State of)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-8"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bonaire, Sint Eustatius and Saba
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-9"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Bouvet Island
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-10"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Brazil
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-11"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Cayman Islands
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-12"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Chile
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-13"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Colombia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-14"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Costa Rica
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-15"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Cuba
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-16"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Curaçao
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-17"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Dominica
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-18"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Dominican Republic
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-19"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Ecuador
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-20"
                        >
                          <div
                            class="css-18biwo"
                          >
                            El Salvador
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-21"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Falkland Islands (Malvinas)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-22"
                        >
                          <div
                            class="css-18biwo"
                          >
                            French Guiana
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-23"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Grenada
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-24"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guadeloupe
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-25"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guatemala
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-26"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Guyana
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-27"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Haiti
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-28"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Honduras
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-29"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Jamaica
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-30"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Martinique
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-31"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Mexico
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-32"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Montserrat
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-33"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Nicaragua
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-34"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Panama
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-35"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Paraguay
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-36"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Peru
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-37"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Puerto Rico
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-38"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Barthélemy
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-39"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Kitts and Nevis
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-40"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Lucia
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-41"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Martin (French part)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-42"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Saint Vincent and the Grenadines
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-43"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Sint Maarten (Dutch part)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-44"
                        >
                          <div
                            class="css-18biwo"
                          >
                            South Georgia and the South Sandwich Islands
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-45"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Suriname
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-46"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Trinidad and Tobago
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-47"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Turks and Caicos Islands
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-48"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Uruguay
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-49"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Venezuela (Bolivarian Republic of)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-50"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Virgin Islands (British)
                          </div>
                        </li>
                        <li
                          class="css-u3ndam"
                          data-testid="dropdown-item-51"
                        >
                          <div
                            class="css-18biwo"
                          >
                            Virgin Islands (U.S.)
                          </div>
                        </li>
                      </ul>
                    </div>
                  </section>
                </div>
              </div>
            </div>
          </div>
          <div
            class="css-57dgik"
          >
            <div
              class="chakra-stack css-1xum4w9"
            >
              <span
                class="css-1qm7lvz"
                data-testid="test-id-Max"
              >
                <span
                  class="css-zvlevn"
                >
                  Max
                </span>
              </span>
              <span
                class="css-1qm7lvz"
                data-testid="test-id-12m"
              >
                <span
                  class="css-zvlevn"
                >
                  12m
                </span>
              </span>
              <span
                class="css-1qm7lvz"
                data-testid="test-id-6m"
              >
                <span
                  class="css-zvlevn"
                >
                  6m
                </span>
              </span>
              <span
                class="css-1qm7lvz"
                data-testid="test-id-1m"
              >
                <span
                  class="css-zvlevn"
                >
                  1m
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-14fqov2"
      >
        <div
          class="css-yrn9ak"
        >
          Selected data is currently unavailable within the carbon registries.
        </div>
      </div>
    </div>
  </div>
</div>
`;
